--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
   </div>
   <script type="text/javascript" src="mappings.js"></script>
   <script type="text/javascript" src="JS/Classes/DataReporter.js"></script>
+  <script type="text/javascript" src="JS/Classes/DataCapture.js"></script>
   <script type="text/javascript" src="JS/init.js"></script>
 </body>
 </html>
